--- a/app/src/main/res/layout/activity_book_shelf.xml
+++ b/app/src/main/res/layout/activity_book_shelf.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".book.BookShelf"
     android:orientation="vertical"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:background="#60DDDDDD"
+    >
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvBookShelf"
