--- a/app/src/main/res/layout/bookshelf_item.xml
+++ b/app/src/main/res/layout/bookshelf_item.xml
@@ -1,17 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
+
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="12dp"
+    android:layout_margin="8dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="6dp"
+    app:cardBackgroundColor="#FFFFFF"
+    >
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="10dp"
     >
 
     <ImageView
         android:id="@+id/ivThumbnail"
         android:layout_width="150dp"
         android:layout_height="200dp"
-        android:scaleType="fitCenter"
+        android:layout_margin="4dp"
         android:layout_marginLeft="4dp"
+        android:scaleType="fitCenter"
         ></ImageView>
 
     <LinearLayout
@@ -24,12 +36,12 @@
             android:id="@+id/tvBookName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:text="Book name"
+            android:textColor="@android:color/holo_blue_dark"
             android:textSize="25sp"
             android:textStyle="bold"
-            android:textColor="@android:color/holo_blue_dark"
-            android:maxLines="1"
-            android:ellipsize="end"
             >
         </TextView>
 
@@ -47,14 +59,16 @@
             android:id="@+id/tvContent"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Content"
-            android:textSize="15sp"
             android:layout_marginTop="4dp"
             android:ellipsize="end"
             android:maxLines="6"
+            android:text="Content"
+            android:textSize="15sp"
             >
         </TextView>
 
     </LinearLayout>
 
 </LinearLayout>
+
+</androidx.cardview.widget.CardView>
